--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
   <meta name="description" content="Online properties file editor">
   <link rel="stylesheet" href="css/properties-editor.css" />
   <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
- </head>
- <body>
-   <h1>Properties Editor</h1>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164009421-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-164009421-1');
+  </script>
+</head>
+<body>
+  <h1>Properties Editor</h1>
   <div>
     <h2>Load properties file:</h2>
     <div>
