--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/fontello.css" />
   <link rel="stylesheet" href="css/properties-editor.css" />
   <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+  <script src="js/encdec.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164009421-1"></script>
   <script>
@@ -28,15 +29,33 @@
       </td>
     </tr>
     <tr>
-      <td><label>Encryption? <input id="encrypt" type="checkbox" class="toggle"/></label></td>
+      <td><label>Encryption</label></td>
       <td>
-        <span class="hidden toggle-encrypt">
-          Pwd: <input id="encrypt-password" type="password"/>
-          <span class="hidden">
-            Iter.: <select id="encrypt-iter"><option value="100000">100000</option></select>
-            H.Algo.: <select id="encrypt-alg"><option value="SHA-256">SHA-256</option></select>
-            Key Sz: <select id="encrypt-ksz"><option value="256">256</option></select>
-          </span>
+        Password:
+        <span id="viewpwd" value="unchecked">
+          <i class="checkspan-checked icon icon-eye"></i>
+          <i class="checkspan-unchecked icon icon-eye-off"></i>
+        </span>
+        <input id="encrypt-password" type="password" value="p4ssw0rd"/>
+        <i id="generate-password" class="icon icon-arrows-cw"></i>
+        <span id="password-options" value="unchecked" class="toggle">
+          <i class="checkspan-unchecked icon icon-cog"></i>
+          <i class="checkspan-checked icon icon-cancel"></i>
+        </span>
+        <span class="hidden toggle-password-options">
+          Size:
+          <select id="pwd-sz">
+            <option value="8">8</option>
+            <option value="10">10</option>
+            <option value="12">12</option>
+            <option value="14">14</option>
+            <option value="16">16</option>
+            <option value="18">18</option>
+            <option value="20">20</option>
+          </select>
+          <label><input type="checkbox" id="pwd-num"/> Numbers</label>
+          <label><input type="checkbox" id="pwd-alpha"/> Alphabet</label>
+          <label><input type="checkbox" id="pwd-sym"/> Symbols</label>
         </span>
       </td>
     </tr>
@@ -99,7 +118,7 @@
     </table>
   </div>
 
-  <div id="output">
+  <div class="hidden" id="output">
     <div id="notcopied">Read properties file from below URL (click/tap to copy to clipboard)</div>
     <div id="copied" class="hidden">URL copied!</div>
     <div><input type='text' readonly='readonly' value=''/></div>
