add filter and global selectors

--- a/index.html
+++ b/index.html
@@ -138,7 +138,13 @@
     <img src=""/>
   </div>
 
-  <h2>Editor <i id="clear-editor" class="icon icon-cancel" title="Clear editor"></i></h2>
+  <h2>Editor
+    <i id="clear-editor" class="icon icon-eraser" title="Clear editor"></i>
+    <span id="vieweditor" value="checked" title="Toggle editor visibility">
+      <i class="checkspan-unchecked icon icon-eye"></i>
+      <i class="checkspan-checked icon icon-eye-off"></i>
+    </span>
+  </h2>
   <textarea id="editor"></textarea>
   <script src="js/properties-editor.js"></script>
 </body>
