--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
     <tr>
       <td><label>Encryption</label></td>
       <td>
-        Password:
+        <label>Password:</label>
         <span id="viewpwd" value="unchecked" title="Toggle password visibility">
           <i class="checkspan-unchecked icon icon-eye"></i>
           <i class="checkspan-checked icon icon-eye-off"></i>
         </span>
-        <input id="encrypt-password" type="password" value="p4ssw0rd"/>
+        <label id="copied-password" class="hidden">Copied!</label>
+        <span>
+          <input id="encrypt-password" type="password" value="p4ssw0rd"/>
+          <i id="copy-password" class="icon icon-clone" title="Copy password to clipboard"></i>
+        </span>
         <i id="generate-password" class="icon icon-arrows-cw" title="Generate password"></i>
         <span id="password-options" value="unchecked" class="toggle" title="Settings">
           <i class="checkspan-unchecked icon icon-cog"></i>
           <i class="checkspan-checked icon icon-cancel"></i>
         </span>
         <span class="hidden toggle-password-options">
-          Size:
+          <label>Size:</label>
           <select id="pwd-sz">
             <option value="8">8</option>
             <option value="10">10</option>
@@ -100,6 +104,8 @@
   </table>
 
   <div id="buttons">
+    <button id="add-row">Add row</button>
+    <button id="delete-rows">Delete selected rows</button>
     <button id="clear-form">Clear form</button>
     <button id="delete-form">Delete full form</button>
   </div>
