--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
           <i id="copy-password" class="icon icon-clone" title="Copy password to clipboard"></i>
         </span>
         <i id="generate-password" class="icon icon-arrows-cw" title="Generate password"></i>
-        <span id="password-options" value="unchecked" class="toggle" title="Settings">
+        <span id="encrypt-options" value="unchecked" class="toggle" title="Settings">
           <i class="checkspan-unchecked icon icon-cog"></i>
           <i class="checkspan-checked icon icon-cancel"></i>
         </span>
-        <span class="hidden toggle-password-options">
+        <span class="hidden toggle-encrypt-options">
+          <br/>
+          <label class="title">Password Generator:</label>
           <label>Size:</label>
           <select id="pwd-sz">
             <option value="8">8</option>
@@ -60,6 +62,28 @@
           <label><input type="checkbox" id="pwd-num"/> Numbers</label>
           <label><input type="checkbox" id="pwd-alpha"/> Alphabet</label>
           <label><input type="checkbox" id="pwd-sym"/> Symbols</label>
+          <br/>
+          <label class="title">Encryption options:</label>
+          <label>Iterations:</label>
+          <select id="enc-iter">
+            <option value="10">10</option>
+            <option value="100">100</option>
+            <option value="1000">1000</option>
+            <option value="10000">10000</option>
+            <option value="100000">100000</option>
+            <option value="1000000">1000000</option>
+            <option value="10000000">10000000</option>
+          </select>
+          <label>Hash algo:</label>
+          <select id="enc-algo">
+            <option value="SHA-1">SHA-1</option>
+            <option value="SHA-256">SHA-256</option>
+          </select>
+          <label>Key size:</label>
+          <select id="enc-key-size">
+            <option value="128">128</option>
+            <option value="256">256</option>
+          </select>
         </span>
       </td>
     </tr>
