--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164009421-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
     gtag('config', 'UA-164009421-1');
   </script>
 </head>
+
 <body>
   <h1>
     Properties Editor <i class="icon icon-shield"></i>
@@ -32,11 +35,12 @@
       <td>Options</td>
       <td>
         <button id="resetCfg" title="Restore default settings and properties">Reset All</button>
-        <label title="If unchecked properties and settings are stored in localStorage to restore state on next reload">
+        <label
+          title="If unchecked properties and settings are stored in localStorage to restore state on next reload">
           Don't save state in browser
-          <input id="forgetme" type="checkbox"/>
+          <input id="forgetme" type="checkbox" />
         </label>
-        <label>Trim values right? <input id="vtrimr" type="checkbox"/></label>
+        <label>Trim values right? <input id="vtrimr" type="checkbox" /></label>
       </td>
     </tr>
     <tr>
@@ -50,7 +54,7 @@
           </span>
           <span id="copied-password" class="hidden">Copied!</span>
           <span>
-            <input id="encrypt-password" type="password" value="p4ssw0rd"/>
+            <input id="encrypt-password" type="password" value="p4ssw0rd" />
             <i id="copy-password" class="icon icon-clone" title="Copy password to clipboard"></i>
           </span>
           <i id="generate-password" class="icon icon-arrows-cw" title="Generate password"></i>
@@ -72,35 +76,35 @@
               <option value="20">20</option>
             </select>
           </label>
-          <label><input type="checkbox" id="pwd-num"/> Numbers</label>
-          <label><input type="checkbox" id="pwd-alpha"/> Alphabet</label>
-          <label><input type="checkbox" id="pwd-sym"/> Symbols</label>
+          <label><input type="checkbox" id="pwd-num" /> Numbers</label>
+          <label><input type="checkbox" id="pwd-alpha" /> Alphabet</label>
+          <label><input type="checkbox" id="pwd-sym" /> Symbols</label>
         </div>
         <div class="hidden toggle-encrypt-options">
           <span class="title">Encryption options:</span>
-            <label>Iterations:
-              <select id="enc-iter">
-                <option value="10">10</option>
-                <option value="100">100</option>
-                <option value="1000">1000</option>
-                <option value="10000">10000</option>
-                <option value="100000">100000</option>
-                <option value="1000000">1000000</option>
-                <option value="10000000">10000000</option>
-              </select>
-            </label>
-            <label>Hash algo:
-              <select id="enc-algo">
-                <option value="SHA-1">SHA-1</option>
-                <option value="SHA-256">SHA-256</option>
-              </select>
-            </label>
-            <label>Key size:
-              <select id="enc-key-size">
-                <option value="128">128</option>
-                <option value="256">256</option>
-              </select>
-            </label>
+          <label>Iterations:
+            <select id="enc-iter">
+              <option value="10">10</option>
+              <option value="100">100</option>
+              <option value="1000">1000</option>
+              <option value="10000">10000</option>
+              <option value="100000">100000</option>
+              <option value="1000000">1000000</option>
+              <option value="10000000">10000000</option>
+            </select>
+          </label>
+          <label>Hash algo:
+            <select id="enc-algo">
+              <option value="SHA-1">SHA-1</option>
+              <option value="SHA-256">SHA-256</option>
+            </select>
+          </label>
+          <label>Key size:
+            <select id="enc-key-size">
+              <option value="128">128</option>
+              <option value="256">256</option>
+            </select>
+          </label>
         </div>
       </td>
     </tr>
@@ -112,7 +116,8 @@
         <td>From:</td>
         <td>
           <label id="file-label">
-            <input type="file" id="file" name="file" accept=".properties, .config, .cfg, .conf, .settings"/>
+            <input type="file" id="file" name="file"
+              accept=".properties, .config, .cfg, .conf, .settings" />
             <span>File</span>
           </label>
           <span class="text">&nbsp;or</span>
@@ -122,11 +127,13 @@
       <tr>
         <td>From Web:</td>
         <td>
-          <input id="fetch-url" type="text" class="urlinput" placeholder="URL to get properties file"/> <button id="fetch">Fetch</button>
-          <label>Authentication? <input type="checkbox" id="fetch-auth" class="toggle"/></label>
+          <input id="fetch-url" type="text" class="urlinput"
+            placeholder="URL to get properties file" />
+          <button id="fetch">Fetch</button>
+          <label>Authentication? <input type="checkbox" id="fetch-auth" class="toggle" /></label>
           <div class="hidden toggle-fetch-auth">
-            <label>User: <input id="fetch-user" type="text"/></label>
-            <label>Password: <input id="fetch-password" type="password"/></label>
+            <label>User: <input id="fetch-user" type="text" /></label>
+            <label>Password: <input id="fetch-password" type="password" /></label>
           </div>
         </td>
       </tr>
@@ -137,11 +144,19 @@
     <span id="status-msg"></span>
   </div>
 
-  <h2>Properties: <span id="pname-edit" title="Click to edit"><span id="pname"></span> <i class="icon icon-pencil"></i></span></h2>
+  <h2>
+    Properties:
+    <span id="pname-edit" title="Click to edit">
+      <span id="pname"></span>
+      <i class="icon icon-pencil"></i>
+    </span>
+  </h2>
 
   <div id="pdesc"></div>
   <table id="tprops">
-    <tr><td class="centered">^^ Load property to start editing ^^</td></tr>
+    <tr>
+      <td class="centered">^^ Load property to start editing ^^</td>
+    </tr>
   </table>
 
   <div id="buttons">
@@ -165,12 +180,13 @@
       <tr>
         <td>To Web:</td>
         <td>
-          <input id="post-url" type="text" class="urlinput" placeholder="Destination URL" value="https://www.friendpaste.com/"/>
+          <input id="post-url" type="text" class="urlinput" placeholder="Destination URL"
+            value="https://www.friendpaste.com/" />
           <button id="post">Post</button>
-          <label>Authentication? <input type="checkbox" id="post-auth" class="toggle"/></label>
+          <label>Authentication? <input type="checkbox" id="post-auth" class="toggle" /></label>
           <div class="hidden toggle-post-auth">
-            <label>User: <input id="post-user" type="text"/></label>
-            <label>Password: <input id="post-password" type="password"/></label>
+            <label>User: <input id="post-user" type="text" /></label>
+            <label>Password: <input id="post-password" type="password" /></label>
           </div>
         </td>
       </tr>
@@ -180,9 +196,9 @@
   <div class="hidden" id="output">
     <div id="notcopied">Read properties file from below URL (click/tap to copy to clipboard)</div>
     <div id="copied" class="hidden">URL copied!</div>
-    <div><input type='text' readonly='readonly' value=''/></div>
+    <div><input type='text' readonly='readonly' value='' /></div>
     <div>Or scan QR Code:</div>
-    <img src=""/>
+    <img src="" />
   </div>
 
   <h2>Editor
