Add shareable link management

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <input id="fetch-url" type="text" class="urlinput"
               placeholder="URL to get properties file" />
             <button id="fetch">Fetch</button>
+            <i class="icon icon-share" id="share-url"></i>
             <label>Authentication? <input type="checkbox" id="fetch-auth" class="toggle" /></label>
           </div>
           <div class="hidden toggle-fetch-auth">
