--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Online properties file editor">
   <link rel="stylesheet" href="css/fontello.css" />
   <link rel="stylesheet" href="css/properties-editor.css" />
-  <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="js/encdec.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164009421-1"></script>
